--- a/workouts/add_workout.html
+++ b/workouts/add_workout.html
@@ -71,8 +71,8 @@
                 <li class="active">
                     <a href="mailbox.html"><i class="fa fa-envelope"></i> <span class="nav-label">Manage Workout </span><span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level collapse">
-                        <li><a href="mailbox.html">Workout List</a></li>
-                        <li class="active"><a href="mail_detail.html">Add Workout</a></li>
+                        <li><a href="../workouts">Workout List</a></li>
+                        <li class="active"><a href="../workouts/add_workout.html">Add Workout</a></li>
                     </ul>
                 </li>
 
