--- a/workouts/index.html
+++ b/workouts/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Maxfit VIP Gym | Add Workout</title>
+    <title>Maxfit VIP Gym | Workout List</title>
 
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link href="../font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -71,8 +71,8 @@
                 <li class="active">
                     <a href="mailbox.html"><i class="fa fa-envelope"></i> <span class="nav-label">Manage Workout </span><span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level collapse">
-                        <li><a href="mailbox.html">Workout List</a></li>
-                        <li class="active"><a href="mail_detail.html">Add Workout</a></li>
+                        <li class="active"><a href="../workouts">Workout List</a></li>
+                        <li><a href="../workouts/add_workout.html">Add Workout</a></li>
                     </ul>
                 </li>
 
@@ -221,7 +221,7 @@
         </div>
         <div class="row wrapper border-bottom white-bg page-heading">
             <div class="col-lg-10">
-                <h2>Add Workout</h2>
+                <h2>Workout List</h2>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item">
                         <a href="index.html">Home</a>
@@ -230,7 +230,7 @@
                         <a>Workouts</a>
                     </li>
                     <li class="breadcrumb-item active">
-                        <strong>Add Workout</strong>
+                        <strong>Workout List</strong>
                     </li>
                 </ol>
             </div>
