--- a/workouts/edit_workout.html
+++ b/workouts/edit_workout.html
@@ -224,7 +224,7 @@
         </div>
         <div class="row wrapper border-bottom white-bg page-heading">
             <div class="col-lg-10">
-                <h2>Add Workout</h2>
+                <h2>Edit Workout</h2>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item">
                         <a href="index.html">Home</a>
