--- a/admin/index.html
+++ b/admin/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Maxfit VIP Gym | Workout List</title>
+    <title>Maxfit VIP Gym | Admin List</title>
 
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link href="../font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -224,16 +224,16 @@
         </div>
         <div class="row wrapper border-bottom white-bg page-heading">
             <div class="col-lg-10">
-                <h2>Workout List</h2>
+                <h2>Admin List</h2>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item">
                         <a href="index.html">Home</a>
                     </li>
                     <li class="breadcrumb-item">
-                        <a>Workouts</a>
+                        <a>Admin</a>
                     </li>
                     <li class="breadcrumb-item active">
-                        <strong>Workout List</strong>
+                        <strong>Admin List</strong>
                     </li>
                 </ol>
             </div>
@@ -244,7 +244,7 @@
                 <div class="col-lg-12">
                     <div class="ibox ">
                         <div class="ibox-title">
-                            <h5>Workout List</h5>
+                            <h5>Admin List</h5>
 
                             <div class="ibox-tools">
                                 <a class="collapse-link">
@@ -271,24 +271,41 @@
                             <table class="footable table table-stripped" data-page-size="8" data-filter=#filter>
                                 <thead>
                                 <tr>
-                                    <th>Image</th>
-                                    <th>Title</th>
-                                    <th>Workout Type</th>
+                                    <th>#ID</th>
+                                    <th>Full Name</th>
+                                    <th>Email</th>
+                                    <th>Last Login</th>
+                                    <th>Status</th>
+                                    <th>created by</th>
                                     <th>Actions</th>
                                 </tr>
                                 </thead>
                                 <tbody>
                                 <tr class="gradeX">
-                                    <td><img alt="image" class="rounded-circle" src="../img/profile_small.jpg"/></td>
-                                    <td>Bench Press</td>
-                                    <td>By Duration</td>
-                                    <td class="center"><a href="../workouts/edit_workout.html" type="button" class="btn btn-success"><i class="fa fa-pencil" aria-hidden="true"></i>                                    </a></td>
+                                    <td>1</td>
+                                    <td>GIMNA KATUGAMPALA</td>
+                                    <td>gimnakatugampala@gmail.com</td>
+                                    <td>20 min ago</td>
+                                    <td></td>
+                                    <td>ADMIN</td>
+                                    <td class="center">
+                                        <button type="button" class="btn btn-success"><i class="fa fa-eye" aria-hidden="true"></i></button>
+                                        <button class="btn btn-danger " type="button"><i class="fa fa-times" aria-hidden="true"></i></button>
+                                        <button class="btn btn-primary " type="button"><i class="fa fa-check" aria-hidden="true"></i></button>
+                                    </td>
                                 </tr>
                                 <tr class="gradeC">
-                                    <td><img alt="image" class="rounded-circle" src="../img/profile_small.jpg"/></td>
-                                    <td>Bench Press II</td>
-                                    <td>By Set</td>
-                                    <td class="center"><a href="../workouts/edit_workout.html" type="button" class="btn btn-success"><i class="fa fa-pencil" aria-hidden="true"></i></a></td>
+                                    <td>2</td>
+                                    <td>GIMNA KATUGAMPALA</td>
+                                    <td>gimnaktest@gmail.com</td>
+                                    <td>20 min ago</td>
+                                    <td></td>
+                                    <td>ADMIN</td>
+                                    <td class="center">
+                                        <button type="button" class="btn btn-success"><i class="fa fa-eye" aria-hidden="true"></i></button>
+                                        <button class="btn btn-danger " type="button"><i class="fa fa-times" aria-hidden="true"></i></button>
+                                        <button class="btn btn-primary " type="button"><i class="fa fa-check" aria-hidden="true"></i></button>
+                                    </td>
                                 </tr>
 
                                 </tbody>
