--- a/workouts/add_workout.html
+++ b/workouts/add_workout.html
@@ -67,8 +67,8 @@
                 <li>
                     <a href="#"><i class="fa fa-bar-chart-o"></i> <span class="nav-label">Manage Admin</span><span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level collapse">
-                        <li><a href="graph_flot.html">Add Admin</a></li>
-                        <li><a href="graph_morris.html">Admin List</a></li>
+                        <li><a href="../admin/">Add Admin</a></li>
+                        <li><a href="../admin/">Admin List</a></li>
                     </ul>
                 </li>
                 <li class="active">
