--- a/admin/add_admin.html
+++ b/admin/add_admin.html
@@ -250,9 +250,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="card">
-                        
-                    <div>
-                        <fieldset class="p-4">
+                        <div>
+                            <fieldset class="p-4">
+                            <legend><h2>Add Admin</h2></legend>
+
                             <div class="form-group row">
                                 <div class="col-sm-10">
                                 <label class="col-form-label">Full Name <span class="text-danger">*</span>:</label>
