--- a/members/index.html
+++ b/members/index.html
@@ -290,7 +290,7 @@
                         <td class="center">4 months ago</td>
                         <td class="center">1 months ago</td>
                         <td class="center">
-                            <button type="button" class="btn btn-primary"><i class="fa fa-eye" aria-hidden="true"></i></button>
+                            <a href="../members/member_details.html" type="button" class="btn btn-primary"><i class="fa fa-eye" aria-hidden="true"></i></a>
                             <button data-toggle="modal" data-target="#myModal5" type="button" class="btn btn-success"><i class="fa fa-line-chart" aria-hidden="true"></i></button>
                         </td>
                     </tr>
@@ -302,7 +302,7 @@
                         <td class="center">19 days ago</td>
                         <td class="center">1 day ago</td>
                         <td class="center">
-                            <button type="button" class="btn btn-primary"><i class="fa fa-eye" aria-hidden="true"></i></button>
+                            <a href="../members/member_details.html" type="button" class="btn btn-primary"><i class="fa fa-eye" aria-hidden="true"></i></a>
                             <button data-toggle="modal" data-target="#myModal5" type="button" class="btn btn-success"><i class="fa fa-line-chart" aria-hidden="true"></i></button>
                         </td>
                     </tr>
@@ -359,7 +359,7 @@
 
                     <div class="modal-footer">
                         <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
+                        <button type="button" class="btn btn-primary">Submit</button>
                     </div>
                 </div>
             </div>
